--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
 
 							"./node_modules/sequential-workflow-designer/css/designer.css",
 							"./node_modules/sequential-workflow-designer/css/designer-light.css",
-							"./node_modules/sequential-workflow-designer/css/designer-dark.css"
+							"./node_modules/sequential-workflow-designer/css/designer-dark.css",
+							"node_modules/font-awesome/css/font-awesome.min.css"
 						],
 						"scripts": [
 							"node_modules/bootstrap/dist/js/bootstrap.min.js"
