--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.2",
     "eva-icons": "^1.1.3",
+    "font-awesome": "^4.7.0",
     "gojs": "^2.3.16",
     "gojs-angular": "^2.0.7",
     "material-icons": "^1.13.12",
